--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -22,11 +22,12 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.10
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install Crypto
+        pip uninstall crypto pycryptodome
+        pip install pycryptodome
 #        pip install flake8 pytest
 #        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 #    - name: Lint with flake8
