--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -15,7 +15,8 @@ permissions:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+#    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
