--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -15,8 +15,8 @@ permissions:
 jobs:
   build:
 
-#    runs-on: ubuntu-latest
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
+#    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -27,8 +27,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip list
         pip uninstall crypto pycryptodome
-        pip install pycryptodome requests
+        pip install pycryptodome requests aes
 #        pip install flake8 pytest
 #        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 #    - name: Lint with flake8
