--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -9,6 +9,9 @@ on:
   schedule:
     - cron: '8,20 1 * * *'
 
+env:
+  TZ: Asia/Shanghai
+
 permissions:
   contents: read
 
@@ -28,8 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip uninstall crypto pycryptodome
-        pip install pycryptodome requests aes
-        pip list
+        pip install pycryptodome requests
 #        pip install flake8 pytest
 #        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 #    - name: Lint with flake8
