--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -32,6 +32,11 @@ jobs:
         python -m pip install --upgrade pip
         pip uninstall crypto pycryptodome
         pip install pycryptodome requests
+    - name: start run
+      env:
+        PUSHPLUS_KEY: ${{ secrets.PUSHPLUS_KEY }}
+      run: |
+        python main.py
 #        pip install flake8 pytest
 #        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 #    - name: Lint with flake8
@@ -40,6 +45,3 @@ jobs:
 #        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: start run
-      run: |
-        python main.py
