--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -6,6 +6,8 @@ name: imaotai-action
 on:
   push:
     branches: [ "master" ]
+  paths:
+    - '.github/workflows/**'
   schedule:
     - cron: '4,15 1 * * *'
 
@@ -29,9 +31,9 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip uninstall crypto pycryptodome
-        pip install pycryptodome requests
+#        python -m pip install --upgrade pip
+#        pip uninstall crypto pycryptodome
+#        pip install pycryptodome requests
     - name: start run
       env:
         PUSHPLUS_KEY: ${{ secrets.PUSHPLUS_KEY }}
