--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install pycryptodome
 #        pip uninstall crypto pycryptodome
 #        pip install pycryptodome requests
     - name: start run
