--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -6,8 +6,8 @@ name: imaotai-action
 on:
   push:
     branches: [ "master" ]
-    paths:
-      - '.github/workflows/**'
+#    paths:
+#      - '.github/workflows/**'
   schedule:
     - cron: '4,15 1 * * *'
 
