--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pycryptodome requests
+          pip install pycryptodome requests beautifulsoup4
       - name: start run
         env:
           PUSHPLUS_KEY: ${{ secrets.PUSHPLUS_KEY }}
