feat: 加解密功能上线测试

--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -9,7 +9,7 @@ on:
     paths:
       - '.github/workflows/**'
   schedule:
-    - cron: '20 0 * * *'
+    - cron: '20 0,1 * * *'
 
 env:
   TZ: Asia/Shanghai
@@ -36,6 +36,7 @@ jobs:
       - name: start run
         env:
           PUSHPLUS_KEY: ${{ secrets.PUSHPLUS_KEY }}
+          PRIVATE_AES_KEY: ${{ secrets.PRIVATE_AES_KEY }}
         run: |
           python main.py
 
