--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -9,7 +9,7 @@ on:
     paths:
       - '.github/workflows/**'
   schedule:
-    - cron: '0 2 18 * * ? '
+    - cron: '5 18 * * * '
 
 env:
   TZ: Asia/Shanghai
