[Hansen] 添加钉钉通知

--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -6,10 +6,8 @@ name: imaotai-action
 on:
   push:
     branches: [ "master" ]
-    paths:
-      - '.github/workflows/**'
   schedule:
-    - cron: '20 0,1 * * *'
+    - cron: '10,15 * * * *'
 
 env:
   TZ: Asia/Shanghai
@@ -45,8 +43,11 @@ jobs:
 
       - name: start run
         env:
-          PUSHPLUS_KEY: ${{ secrets.PUSHPLUS_KEY }}
-          PRIVATE_AES_KEY: ${{ secrets.PRIVATE_AES_KEY }}
+          MT_PUSHPLUS_KEY: ${{ secrets.MT_PUSHPLUS_KEY }}
+          MT_GAODE_KEY: ${{ secrets.MT_GAODE_KEY }}
+          MT_PRIVATE_AES_KEY: ${{ secrets.MT_PRIVATE_AES_KEY }}
+          MT_DINGTALK_ACCESS_TOKEN: ${{ secrets.MT_DINGTALK_ACCESS_TOKEN }}
+          MT_DINGTALK_SECRET: ${{ secrets.MT_DINGTALK_SECRET }}
         run: |
           python main.py
 
