--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ "master" ]
   schedule:
-    - cron: '10,15 * * * *'
+    - cron: '10,15 1 * * *'
 
 env:
   TZ: Asia/Shanghai
