--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -7,7 +7,8 @@ on:
   push:
     branches: [ "master" ]
   schedule:
-    - cron: '10,15 1 * * *'
+    - cron: '10,30 1 * * *' # 上午9点10分、30分去预约
+    - cron: '30 10 * * *' # 下午6点30分查询结果
 
 env:
   TZ: Asia/Shanghai
@@ -49,12 +50,3 @@ jobs:
           MT_DINGTALK_SECRET: ${{ secrets.MT_DINGTALK_SECRET }}
         run: |
           python main.py
-
-#        pip install flake8 pytest
-#        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-#    - name: Lint with flake8
-#      run: |
-#        # stop the build if there are Python syntax errors or undefined names
-#        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-#        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-#        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
