--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -7,8 +7,8 @@ on:
   push:
     branches: [ "master" ]
   schedule:
-    - cron: '10,30 1 * * *' # 上午9点10分、30分去预约
-    - cron: '30 10 * * *' # 下午6点30分查询结果
+    - cron: '1,10 1 * * *' # 上午9点1分、10分去预约
+    - cron: '1,10 10 * * *' # 下午6点1分、10分查询结果
 
 env:
   TZ: Asia/Shanghai
