--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         id: api_request
         run: |
           response=$(curl -s -X GET 'https://api.example.com/data' -H 'accept: application/json')
-          echo "::set-output name=response::$response"
+          echo "response=$response" >> $GITHUB_ENV
 
       - name: Output API Response
-        run: echo "API Response: ${{ steps.api_request.outputs.response }}"
+        run: echo "API Response: $response"
