ci: 更新 GitHub Actions 工作流
- 注释掉 PUSHPLUS_KEY 环境变量
- 添加 SCKEY 环境变量用于 Server 酱通知
- 保留 PRIVATE_AES_KEY环境变量不变

--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -45,7 +45,8 @@ jobs:
 
       - name: start run
         env:
-          PUSHPLUS_KEY: ${{ secrets.PUSHPLUS_KEY }}
+#          PUSHPLUS_KEY: ${{ secrets.PUSHPLUS_KEY }}
+          SCKEY: ${{ secrets.SCKEY }}
           PRIVATE_AES_KEY: ${{ secrets.PRIVATE_AES_KEY }}
         run: |
           python main.py
